# vision-balise

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-pi-new.sh  build-pi.sh  build.sh  calibration.yml  config.yml  deploy.sh  download.sh  etallonage.yml  get-logs.sh  getLogs.sh  raspberry-new.cmake  raspberry.cmake
resources/: calibration-rpicam-2.1.yml
scripts/: run.sh  sauron-photo.service  sauron-shutdown.service  sauron.service  shutdown.py  stream.py  takePhoto.sh
src/: Calibration.cpp  Calibration.h  Config.cpp  Config.h  Detection.cpp  Detection.h  Etallonage.cpp  Etallonage.h  Etalonnage.cpp  Etalonnage.h  MultiSocketHelper.cpp  MultiSocketHelper.h  ProcessThread.cpp  ProcessThread.h  Screen.cpp  Screen.h  SocketHelper.cpp  SocketHelper.h  VideoThread.h  base64.h  common.h  main.cpp  test.h  tester.h  utils.cpp  utils.h
